@@ -7,7 +7,7 @@
     <artifactId>evosuite</artifactId>
     <name>EvoSuite</name>
     <description>n/a</description>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.3-SNAPSHOT</version>
     <packaging>pom</packaging>
     <url>http://www.evosuite.org/</url>
     <inceptionYear>2010</inceptionYear>
@@ -107,6 +107,17 @@
 
     <profiles>
         <profile>
+            <id>SystemTests</id>
+            <!-- properties>
+                <systemTests>**/*SystemTest.java</systemTests>
+                <integrationTests>**/*IntTest.java</integrationTests>
+            </properties -->
+            <properties>
+                <systemTests></systemTests>
+                <integrationTests></integrationTests>
+            </properties>
+        </profile>
+        <profile>
             <id>tools-default</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -143,18 +154,6 @@
             </properties>
         </profile>
         <profile>
-            <id>Java7</id>
-            <activation>
-                <jdk>1.7</jdk>
-                <property>
-                    <name>Java7</name>
-                </property>
-            </activation>
-            <properties>
-                <toolsVersion>1.7.0</toolsVersion>
-            </properties>
-        </profile>
-        <profile>
             <!-- needed as profile, as getting issue with Maven Plugin :( -->
             <id>rootReporting</id>
             <reporting>
@@ -174,20 +173,20 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-pmd-plugin</artifactId>
-                        <version>3.5</version>
+                        <version>3.6</version>
                         <configuration>
-                            <targetJdk>1.7</targetJdk>
+                            <targetJdk>1.8</targetJdk>
                         </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-project-info-reports-plugin</artifactId>
-                        <version>2.8</version>
+                        <version>2.8.1</version>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-report-plugin</artifactId>
-                        <version>2.18.1</version>
+                        <version>2.19</version>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -214,7 +213,6 @@
             <dependency>
                 <groupId>com.sun</groupId>
                 <artifactId>tools</artifactId>
-                <!--				<version>${toolsVersion}</version> -->
                 <version>1.0.0</version>
                 <scope>system</scope>
                 <systemPath>${toolsjar}</systemPath>
@@ -359,13 +357,31 @@
                 <!-- LGPL 2.1 -->
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-entitymanager</artifactId>
-                <version>4.3.10.Final</version>
+                <version>5.0.5.Final</version>
             </dependency>
             <dependency>
                 <!-- Apache 2 -->
                 <groupId>javax.inject</groupId>
                 <artifactId>javax.inject</artifactId>
                 <version>1</version>
+            </dependency>
+            <dependency>
+                <!-- CDDL + GPLv2 with classpath exception -->
+                <groupId>javax.ejb</groupId>
+                <artifactId>javax.ejb-api</artifactId>
+                <version>3.2</version>
+            </dependency>
+            <dependency>
+                <!-- CDDL + GPLv2 with classpath exception -->
+                <groupId>javax.faces</groupId>
+                <artifactId>javax.faces-api</artifactId>
+                <version>2.2</version>
+            </dependency>
+            <dependency>
+                <!-- CDDL  -->
+                <groupId>javax.ws.rs</groupId>
+                <artifactId>jsr311-api</artifactId>
+                <version>1.1.1</version>
             </dependency>
             <dependency>
                 <!-- Apache 2 -->
@@ -377,7 +393,7 @@
                 <!-- HSQLDB License	http://hsqldb.org/web/hsqlLicense.html, based on BSD -->
                 <groupId>org.hsqldb</groupId>
                 <artifactId>hsqldb</artifactId>
-                <version>2.3.2</version>
+                <version>2.3.3</version>
             </dependency>
             <dependency>
                 <!-- Apache 2 -->
@@ -447,7 +463,7 @@
                 <inherited>true</inherited>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>1.4</version>
+                <version>1.4.1</version>
                 <executions>
                     <execution>
                         <id>enforce-maven-3</id>
@@ -502,12 +518,12 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>1.9.1</version>
+                <version>1.10</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.2</version>
+                <version>3.0.3</version>
                 <configuration>
                     <xmlOutput>true</xmlOutput>
                     <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
@@ -570,7 +586,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.2</version>
+                <version>2.5.3</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -589,17 +605,6 @@
                  </configuration> </execution> </executions> </plugin> -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
-                <configuration>
-                    <skipTests>${skipTests}</skipTests>
-                    <forkCount>1</forkCount>
-                    <reuseForks>false</reuseForks>
-                    <reportFormat>xml</reportFormat>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>2.4</version>
                 <configuration>
@@ -609,16 +614,35 @@
                     </excludes>
                 </configuration>
             </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19</version>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <reportFormat>xml</reportFormat>
+                    <!-- excludes>
+                        <exclude>**/*SystemTest.java</exclude>
+                        <exclude>**/*IntTest.java</exclude>
+                    </excludes -->
+                    <excludes>
+                        <exclude>${integrationTests}</exclude>
+                        <exclude>${systemTests}</exclude>
+                    </excludes>
+                    <argLine> -Xms512m -Xmx4096m -XX:MaxPermSize=512m </argLine>
+                </configuration>
+            </plugin>
             <!-- pluging to run tests after 'package' phase in 'integration-test' -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>2.19</version>
                 <configuration>
-                    <includes>
-                        <include>**/*IT.java</include>
-                    </includes>
+                    <!-- includes>
+                        <include>${integrationTests}</include>
+                        <include>${systemTests}</include>
+                    </includes -->
                 </configuration>
                 <executions>
                     <execution>
@@ -672,7 +696,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
-                    <version>2.4.1</version>
+                    <version>2.4.2</version>
                     <executions>
                         <execution>
                             <phase>package</phase>
@@ -772,8 +796,14 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <skipTests>true</skipTests>
         <deployURL>Needs to be fixed in Jenkins</deployURL>
+        <!-- empty by default. activated through profile -->
+        <!-- systemTests></systemTests>
+        <integrationTests></integrationTests -->
+
+        <systemTests>**/*SystemTest.java</systemTests>
+        <integrationTests>**/*IntTest.java</integrationTests>
+
     </properties>
 
 </project>
